--- a/public/views/simulator/index.html
+++ b/public/views/simulator/index.html
@@ -19,10 +19,19 @@
                         <li><a href="#/profile"><i class="fa fa-edit"></i> Profile</a></li>
                         <li><a href="#/" ng-click="exit()"><i class="fa fa-power-off"></i> Exit</a></li>
                     </ul>
-                </div>		
+                </div>
             </nav>
             
             <div id="page-wrapper" ng-show="sceneList.length>0">
+                <div class="alert alert-dismissable alert-danger" ng-repeat="errorMsg in errorMsgList">
+                    <button type="button" 
+                            class="close" 
+                            data-dismiss="alert" 
+                            aria-hidden="true" 
+                            ng-click="msgHide(errorMsg)">&times;</button>
+                    {{errorMsg}}
+                </div>   
+                
                 <div class="row">
                     <div class="col-sm-4">
                         <label>Select scene: </label>
@@ -517,6 +526,15 @@
                                 
                                 <div class="col-xs-12">
                                     <br/>
+                                    <label>Result type show</label>
+                                    <select class="form-control" ng-model="resultTypeShow">
+                                        <option value="emptyList">Show empty list if not relevant items found</option>
+                                        <option value="nonPersonalizedRecommendation">Show non-personalized recommendation if not relevant items found</option>
+                                    </select>
+                                </div>
+                                
+                                <div class="col-xs-12">
+                                    <br/>
                                     <label>Item types to recommend</label>
                                     <br/>
                                     
@@ -527,11 +545,6 @@
                                     
                                     <br><br>
                                     <input type="submit" ng-click="recomend()" class="btn btn-primary" value="Recommend items">
-                                </div>
-                                
-                                <div class="col-xs-12">
-                                    <br/>
-                                    <label></label>
                                 </div>
                             </div>
                         </div>
