--- a/public/views/simulator/index.html
+++ b/public/views/simulator/index.html
@@ -55,14 +55,13 @@
                 </div>
             </div>
     
-            
             <div id="page-wrapper" ng-hide="hideLoadBar">
                 {{info}}
                 <div class="progress progress-striped active">
                     <div class="progress-bar" role="progressbar"
                          aria-valuemin="0" aria-valuemax="100"
-                         style="width: 90%">
-                        <span class="sr-only">45% completado</span>
+                         style="width: {{percentage}}">
+                        <span class="sr-only">{{percentage}} completado</span>
                     </div>
                 </div>
             </div>
